<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_dresser_home">

    <fragment
        android:id="@+id/navigation_dresser_home"
        android:name="com.example.treesme.Hairdresser.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hairdresser_home" />

     <fragment
         android:id="@+id/navigation_pie_chart"
         android:name="com.example.treesme.Hairdresser.ui.chart.ChartFragment"
         android:label="@string/title_chart"
         tools:layout="@layout/pie_chart_fragment" />
    <fragment
        android:id="@+id/navigation_dresser_chat_support"
        android:name="com.example.treesme.Hairdresser.ui.chat.ChatSupportFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat"/>
    <fragment
        android:id="@+id/navigation_dresser_message"
        android:name="com.example.treesme.Hairdresser.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message"/>
    <fragment
        android:id="@+id/navigation_dresser_profile"
        android:name="com.example.treesme.Hairdresser.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_hair_dresser_profile"/>
</navigation>