<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objective_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price_txt"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/benefit_price_txt"
            android:inputType="phone"
            android:elevation="8dp"
            android:padding="8dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:backgroundTint="@color/purple_500"
            android:text="@string/save_btn_txt"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:text="@string/cancel_btn_txt"
            android:textColor="#ff0000" />
    </LinearLayout>

</LinearLayout>