<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".AccountsLogin.AccountsRegistrationScreen">
    <View
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/top"
        android:gravity="center_vertical"></View>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcom_text"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/user_login_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:textSize="22sp"
            android:gravity="center"
            android:id="@+id/or"
            android:layout_margin="8dp"
            android:text="@string/OR_text" />

        <Button
            android:id="@+id/logindresser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/or"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/dresser_login_text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_yet_registered_text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/create_account_txt"
            android:id="@+id/signUp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/or"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>