<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.FilterHairStylist">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/back"
            android:paddingLeft="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_title_txt"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_txt"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/address"
            android:layout_marginTop="8dp"
            android:hint="@string/address_hint"
            android:padding="8dp"
            android:background="@drawable/address_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_txt"
            android:layout_marginTop="15dp"
            android:textSize="16sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
        <TextView
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:id="@+id/today"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/today_hint"
            android:textColor="@android:color/white"
            android:background="@drawable/input"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:id="@+id/tomorrow"
            android:text="@string/tomorrow_hint"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:background="@drawable/input"/>
        </LinearLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:id="@+id/select"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="Select a date"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_baseline_today_24"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_txt"
            android:layout_marginTop="15dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:id="@+id/time1"
                android:gravity="center"
                android:padding="8dp"
                android:text="06h 12h"
                android:textColor="@android:color/white"
                android:background="@drawable/input"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:id="@+id/time2"
                android:text="12h 18h"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:background="@drawable/input"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:id="@+id/time3"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:text="18h 00h"
                android:textColor="@android:color/white"
                android:background="@drawable/input"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:background="@drawable/input"
            android:text="@string/continue_txt"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>